451209: Rename Daily Work to My Work
- Rename Daily Work to My work in the UI
- Rename (almost) all mentions of Daily Work
- Avoid renaming any of the Mixpanel events!

Conflicts:
	webapp/src/main/webapp/WEB-INF/jsp/administration/editUser.jsp
	webapp/src/main/webapp/WEB-INF/jsp/dailyWork.jsp
	webapp/src/main/webapp/WEB-INF/tags/structure/defaultRightHeader.tag

--- a/webapp/src/main/webapp/static/css/dynamictable.css
+++ b/webapp/src/main/webapp/static/css/dynamictable.css
@@ -869,7 +869,8 @@ ul.dynamics-error-container {
 }
 
 /**
- * Daily Work context links
+ * My work
+ * context links
  */
 a.context, span.context {
   color: ;
