--- a/webapp/src/main/webapp/static/css/structure.ui.css
+++ b/webapp/src/main/webapp/static/css/structure.ui.css
@@ -9,7 +9,7 @@
  *  - Edit existing menu
  *  - Navigation tabs
  *  - Footer
- *  - Daily work styles
+ *  - My work styles
  *  - Search by text box
  */ /**
  * OVERALL LAYOUT
