434208: Rename Portfolio & Dashboards
- Rename Portfolio & Dashboards

Original description:
“Portfolio & Dashboards => Dashboards”

Conflicts:
	webapp/src/main/webapp/WEB-INF/tags/structure/defaultTabs.tag

--- a/webapp/src/main/webapp/static/css/dynamictable.css
+++ b/webapp/src/main/webapp/static/css/dynamictable.css
@@ -735,7 +735,7 @@ table.project-iteration-metrics {
 }
 
 /**
- * Portfolio page styles
+ * Dashboards page styles
  */
 .portfolio-ranked-project-table .dynamictable-row {
   background-color: #edf;
